Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125725

QQuickControl::focusReasonChanged does not work properly

    XMLWordPrintable

Details

    • d887758bf (dev), 0682af38c (6.8), faef2e404 (6.7)

    Description

      It's only issued when QQuickControl::setFocusReason is called which is not all cases. Normally, it will change as the focus changes through other means like a tab press or anything, which are taken care of by QQuickItemPrivate.

      I'd produce a patch but it's unclear what the way forward is. I suggest we make focusReason a QQuickItem property. Alternatively, we can use one of the fancy new property objects from Qt 6 as QQuickItemPrivate is not a QObject and therefore cannot emit.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dorisverria Doris Verria
            apol Aleix Pol
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes