Make QQuickItemPrivate::setLastFocusChangeReason virtual

Fix a regression that 644ee4d23464cb04b5162051ffa1524f006b544d
introduced by moving focusReason to QQuickItemPrivate. The already
existing QQuickControl::focusReasonChanged signal was not being
emitted anymore when the focus would change. To fix, make
setLastFocusChangeReason virtual in QQuickItemPrivate so that the
subclasses can override and emit the relevant signals.

Fixes: QTBUG-125725
Pick-to: 6.7
Change-Id: I88d664ec4fa3cc9262ee2703d63e7e716cac68e9
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit d887758bf4727d891ae05958d2c10d395c34be81)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>